kubernetes/kneeTrainerAPI-deploy&service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kneeTrainerAPI-deployment
  namespace: webIOTtrainer
  labels:
    app: kneeTrainerAPI
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kneeTrainerAPI
  template:
    metadata:
      labels:
        app: kneeTrainerAPI
    spec:
      containers:
      - name: myexpressapp
        image: madaralmog/kneetrainer-api-server-dev::1.0
        imagePullPolicy: ifNotPresent
        ports:
        - containerPort: 5000
        // where to mount the data in the container
        volumeMounts:
        - name: webIOTServerExpressJS
          mountPath: /usr/src/api
        - name: database
          mountPath: /usr/src/api/database
      restartPolicy: Always
      // request for the persistent volume
      volumes:
      - name: webIOTServerExpressJS
        persistentVolumeClaim:
          claimName: webIOTServerExpressJS
      - name: database
        persistentVolumeClaim:
          claimName: database
---
apiVersion: v1
kind: Service
metadata:
  name: kneeTrainerAPI-service
  namespace: webIOTtrainer
spec:
  selector:
    app: kneeTrainerAPI
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
