kubernetes/kneeTrainerAPP-deploy&service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kneetrainer-app-deployment
  namespace: web-iot-trainer
  labels:
    app: kneetrainer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kneetrainer-app
  template:
    metadata:
      labels:
        app: kneetrainer-app
    spec:
      containers:
      - name: myreactapp
        image: madaralmog/kneetrainer-app-client-dev:1.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: web-iot-react-front
          mountPath: /usr/src/app
      restartPolicy: Always
      volumes:
      - name: web-iot-react-front
        persistentVolumeClaim:
          claimName: web-iot-react-front
---
apiVersion: v1
kind: Service
metadata:
  name: kneetrainer-app-service
  namespace: web-iot-trainer
spec:
  selector:
    app: kneetrainer-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
