kubernetes/kneeTrainerAPI-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kneeTrainerAPP-ingress
  namespace: webIOTtrainer
spec:
  tls:
  - hosts:
    - kneetrainer.madarfamily.local
    secretName: kneeTrainerAPP-tls
  rules:
  - host: kneetrainer.madarfamily.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kneeTrainerAPP-service
            port:
              number: 3000
